[package]
name = "s3-open"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.11"
aws-sdk-s3 = "0.11"
aws-smithy-types = "0.41"
tokio = {version = "1", features = ["full"]}
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "3.1.15", features = ["derive"] }
tempfile = "3.3.0"
tokio-stream = "0.1.8"
